--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </p>
       <div class="row">
         <div class="col-md-6 mb-4">
-          <a href="https://epic-wescoff-b8c9e4.netlify.com/" target="_blank">
+          <a href="https://jacob-coffee.netlify.com/" target="_blank">
             <div class="card card-a">            
               <img class="card-img-top card-1" src="img/coffee.jpg" alt="image not supported" />        
               <div class="card-text">
@@ -187,7 +187,7 @@
           </a>
         </div>
         <div class="col-md-6 mb-4">
-          <a href="https://optimistic-raman-ca5020.netlify.com/" target="_blank">
+          <a href="https://hellboy.netlify.com/" target="_blank">
             <div class="card card-a">            
               <img class="card-img-top card-1" src="img/harley1.jpg" alt="image not supported" />
               <div class="card-text">
@@ -198,7 +198,7 @@
           </a>
         </div> 
         <div class="col-md-6 mb-4">
-          <a href="https://priceless-kilby-8244be.netlify.com" target="_blank">
+          <a href="https:overux.netlify.com" target="_blank">
             <div class="card card-a">            
               <img class="card-img-top card-1" src="img/analytics.jpg" alt="image not supported" />
               <div class="card-text">
