--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <!-- Contact Me --> 
       <div class="container-fluid bg-dark text-light text-center" id="contact">
         <div class="row d-flex justify-content-center align-items-center pt-5">
-          <form class="col-lg-6 col-sm-7" method="POST" data-netlify="true">
+          <form class="col-lg-6 col-sm-7" netlify>
             <h2 class="display-4 m-4">Get in touch</h2>
             <div class="form-group">
               <label class="d-flex justify-content-start" for="email">Email address:</label>
